refactor[enum issue]: getting issue with enum schem types
